# UnityNativePluginsExample

./: README.md
CMakeExample/AndroidMK/: README.md
CMakeExample/AndroidMK/jni/: Android.mk  Application.mk
CMakeExample/AndroidMK/jni/include/: hello.h
CMakeExample/AndroidMK/jni/src/: hello.c  main.c
CMakeExample/CMakeExample2_StaticLibrary/: CMakeLists.txt  README.md  main.c
CMakeExample/CMakeExample2_StaticLibrary/math/: CMakeLists.txt  MathFunction.h
CMakeExample1_Executable/: README.md  main.c
CMakeExample2_StaticLibrary/math/: MathFunction.c
CMakeExampleExecutable/: Makefile  README.md
Example1/: main.c
Example1/NativeProject/: CMakeLists.txt  MathFunction.c  MathFunction.h
Example1/PluginDemo/: main.c
Example1/PluginDemo/ProjectSettings/: ProjectSettings.asset
